# FastNN

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
benches/: tensor_ops.rs
cuda/: kernels.cu  stubs.c
cuda/include/: kernels.h
examples/: char_lm.rs  mnist.rs  mnist_cnn.rs  mnist_mlp.rs  simple_mlp.rs  transformer.rs
src/: lib.rs
src/autograd/: backward_ops.rs  graph.rs  mod.rs  variable.rs
src/cuda/: context.rs  memory.rs  mod.rs
src/data/: dataloader.rs  dataset.rs  mnist.rs  mod.rs
src/nn/: activation.rs  conv.rs  dropout.rs  embedding.rs  flatten.rs  linear.rs  loss.rs  mod.rs  module.rs  normalization.rs  pooling.rs  rnn.rs  sequential.rs  transformer.rs
src/optim/: adam.rs  mod.rs  scheduler.rs  sgd.rs
src/serialize/: checkpoint.rs  mod.rs
src/tensor/: cuda_backend.rs  mod.rs  ops.rs  tensor.rs
src/utils/: mod.rs  random.rs
tests/: cuda_parity.rs  gradcheck.rs
